[gd_scene load_steps=25 format=2]

[ext_resource path="res://csotany.gd" type="Script" id=1]
[ext_resource path="res://art/pokocska.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.865, 14.6835 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.5311, 11.0882 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.2024
height = 4.67846

[sub_resource type="Animation" id=4]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/damageradius/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack2"

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 0 ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "attack2"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachine" id=20]
states/attack/node = SubResource( 8 )
states/attack/position = Vector2( 373, 191 )
states/attack2/node = SubResource( 9 )
states/attack2/position = Vector2( 399, 56 )
states/idle/node = SubResource( 10 )
states/idle/position = Vector2( 612, 56 )
states/run/node = SubResource( 11 )
states/run/position = Vector2( 667, 191 )
transitions = [ "attack", "idle", SubResource( 12 ), "idle", "attack", SubResource( 13 ), "attack", "run", SubResource( 14 ), "run", "attack", SubResource( 15 ), "idle", "run", SubResource( 16 ), "run", "idle", SubResource( 17 ), "attack2", "idle", SubResource( 18 ), "idle", "attack2", SubResource( 19 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=21]

[sub_resource type="CircleShape2D" id=22]
radius = 534.244

[node name="csotany" type="KinematicBody2D"]
collision_layer = 9
collision_mask = 9
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.0968552, 0 )
scale = Vector2( 0.99702, 1 )
texture = ExtResource( 2 )
vframes = 2
hframes = 3
frame = 1
region_enabled = true
region_rect = Rect2( 0.460663, 9.07072, 192.856, 93.6048 )

[node name="damageradius" type="Area2D" parent="Sprite"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/damageradius"]
light_mask = 4
position = Vector2( 20.4915, 0.87113 )
shape = SubResource( 1 )

[node name="attackradius" type="Area2D" parent="Sprite"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/attackradius"]
light_mask = 4
position = Vector2( 20.4083, 0.375149 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 9
position = Vector2( -0.774857, 0.169891 )
rotation = -1.5708
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 4 )
anims/attack2 = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/run = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 20 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 21 )

[node name="detect" type="Area2D" parent="."]
visible = false
light_mask = 4
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect"]
light_mask = 4
position = Vector2( -1.32039, 0.263519 )
shape = SubResource( 22 )

[node name="Bar" type="ColorRect" parent="."]
margin_left = -34.0
margin_top = -23.0
margin_right = 37.0
margin_bottom = -21.0
color = Color( 0.690196, 0.145098, 0.145098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Sprite/damageradius" to="." method="_on_damageradius_body_entered"]
[connection signal="body_exited" from="Sprite/damageradius" to="." method="_on_damageradius_body_exited"]
[connection signal="body_entered" from="Sprite/attackradius" to="." method="_on_attackradius_body_entered"]
[connection signal="body_exited" from="Sprite/attackradius" to="." method="_on_attackradius_body_exited"]
[connection signal="body_entered" from="detect" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="detect" to="." method="_on_detect_body_exited"]
